--- a/DevBian.DataCache/DevBian.DataCache.csproj
+++ b/DevBian.DataCache/DevBian.DataCache.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataCacheExpirationType.cs" />
     <Compile Include="DataCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
