--- a/DevBian.DemoWebSite/Web.config
+++ b/DevBian.DemoWebSite/Web.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DevBian.DemoWebSite.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings/>
   <connectionStrings/>
   <system.web>
@@ -9,7 +14,7 @@
       of the security authentication mode used by 
       ASP.NET to identify an incoming user. 
     -->
-    <authentication mode="Windows"/>
+    <authentication mode="None"/>
     <!--
        The <customErrors> section enables configuration 
        of what to do if/when an unhandled error occurs 
@@ -23,8 +28,17 @@
        </customErrors>
     -->
   </system.web>
-  <!-- 
-        The system.webServer section is required for running ASP.NET AJAX under Internet
-        Information Services 7.0.  It is not necessary for previous version of IIS.
-    -->
+  <applicationSettings>
+    <DevBian.DemoWebSite.Properties.Settings>
+      <setting name="IsCacheEnable" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ExpirationType" serializeAs="String">
+        <value>SlidingExpiration</value>
+      </setting>
+      <setting name="ExpirationTime" serializeAs="String">
+        <value>00:20:00</value>
+      </setting>
+    </DevBian.DemoWebSite.Properties.Settings>
+  </applicationSettings>
 </configuration>
